<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_location_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_title_hint"
                android:inputType="text"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/add_location_role1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/add_location_role2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/add_location_role3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/add_location_role4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/add_location_role5_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/add_location_role6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

            <EditText
                android:id="@+id/add_location_role7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_text"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/add_location_role_hint"
                android:inputType="text"
                android:maxLength="30"/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_location_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_save_location" />

</android.support.design.widget.CoordinatorLayout>