...
    <string name="delete_dialog_message">Are you sure?</string>

    <!-- Add Location Strings -->
    <string name="add_location_title_hint">Enter the location\'s title</string>
    <string name="add_location_role_hint">Enter a role</string>
    <string name="add_location_field_error">Empty field</string>
    <string name="add_location_error">Fields cannot be empty</string>

    <!-- Game Lobby Strings -->
    <string name="game_lobby_screen_title">Game Lobby</string>
    <string name="select_number_of_players">Select the number of players:</string>
    <string name="three">3</string>
    <string name="four">4</string>
...
