<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Show location and role buttons -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/game_detail_show_locations_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:text="@string/hide_locations"/>

            <Button
                android:id="@+id/game_detail_show_roles_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:textAllCaps="false"
                android:text="@string/hide_roles"/>

        </LinearLayout>

        <!-- Timer layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rounded_text"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/time_remaining"/>

            <TextView
                android:id="@+id/game_detail_timer_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text=""/>

            <Button
                android:id="@+id/game_detail_timer_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:layout_margin="5dp"
                android:textAllCaps="false"
                android:text="@string/start"/>

        </LinearLayout>

        <!-- Player role buttons -->
        <LinearLayout
            android:id="@+id/game_detail_role_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_text"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/reveal_player_role"/>

            <Button
                android:id="@+id/role_1_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_2_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_3_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_4_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_5_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_6_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_7_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/role_8_button"
                android:background="@drawable/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textAllCaps="false"/>

        </LinearLayout>

        <!-- Locations layout -->
        <LinearLayout
            android:id="@+id/game_detail_grid_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_text"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <GridView
                android:id="@+id/game_detail_grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <Button
            android:id="@+id/game_detail_end_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:text="@string/end_game"/>

    </LinearLayout>

</ScrollView>